--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <title>Aurelia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
+    <style>
+        body {
+            touch-action:none;
+        }
+    </style>
   </head>
 
   <body aurelia-app="main">
