--- a/dev-app/app.html
+++ b/dev-app/app.html
@@ -1,13 +1,21 @@
 <template>
-  
-  <require from="../dev-app/app.css"></require>
+
+  <!-- <require from="../dev-app/app.css"></require> -->
 
   <div id="wrapper">
     <!--header-section  declaration -->
     <div class="main-header" id="header-section">
       <ul class="header-list">
         <li class="float-left header-style icon-menu" id="hamburger"></li>
-        <li class="float-left header-style nav-pane"><b>Navigation Pane</b></li>
+        <li class="float-left header-style nav-pane">
+          <a class="doc-logo-link"
+            href="https://help.syncfusion.com/?_ga=2.135614964.457206101.1580981579-1840676678.1579783186">
+            <div class="doc-logo doc-icons icon-syncfusion"></div>
+          </a>
+        </li>
+        <li class="float-left header-style nav-pane">
+          <div class="doc-header-platform">Aurelia</div>
+        </li>
         <li class="header-style float-right support border-left"><b>Support</b></li>
       </ul>
     </div>
@@ -31,9 +39,9 @@
 
     <!-- main-content declaration -->
     <div class="main-content" id="main-text">
-      
+
       <div class="sidebar-content">
-        
+
         <router-view></router-view>
 
       </div>
@@ -43,8 +51,8 @@
 
 
 
-  
-  
 
-  
+
+
+
 </template>
