chore(docs): publish doc site

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="app.css" rel="stylesheet">
+    <!-- <link href="https://ej2.syncfusion.com/documentation/1.493e6315ef3a09bc2f74.css" rel="stylesheet">
+    <link href="https://ej2.syncfusion.com/documentation/component---src-templates-layout-js.6291b3193ad1da15c0e0.css" rel="stylesheet"> -->
     <style>
         body {
             touch-action:none;
