chore(docs): add Aurelia logo

--- a/dev-app/app.html
+++ b/dev-app/app.html
@@ -10,11 +10,13 @@
         <li class="float-left header-style nav-pane">
           <a class="doc-logo-link"
             href="https://help.syncfusion.com/?_ga=2.135614964.457206101.1580981579-1840676678.1579783186">
-            <div class="doc-logo doc-icons icon-syncfusion"></div>
+            <div class="doc-logo doc-icons icon-syncfusion" style="margin: 0px; color: white;"></div>
           </a>
         </li>
         <li class="float-left header-style nav-pane">
-          <div class="doc-header-platform">Aurelia</div>
+          <a class="doc-logo-link" href="https://aurelia.io">
+            <img src="./aurelia.png" width="150px" class="float-left" style="margin-top: -10px;">
+          </a>
         </li>
         <li class="header-style float-right support border-left"><b>Support</b></li>
       </ul>
