--- a/dev-app/app.html
+++ b/dev-app/app.html
@@ -4,7 +4,7 @@
 
   <div id="wrapper">
     <!--header-section  declaration -->
-    <div class="main-header" id="header-section">
+    <div class="main-header" id="header-section" style="position: fixed; z-index: 999; width: 100%;">
       <ul class="header-list">
         <li class="float-left header-style icon-menu" id="hamburger"></li>
         <li class="float-left header-style nav-pane">
@@ -24,15 +24,37 @@
     <!-- end of header-section -->
 
     <!-- sidebar element declaration -->
-    <aside id="sidebar-treeview">
-      <div class="main-menu">
-        <div class="table-content">
-          <input type="text" placeholder="Search..." class="search-icon">
-          <p class="main-menu-header">TABLE OF CONTENTS</p>
-        </div>
-        <div>
-          <!-- <ul id="main-treeview"></ul> -->
-          <div id="main-treeview"></div>
+    <aside id="sidebar-treeview"  style="position: fixed; margin-top: 64px; z-index: 998;">
+        <div class="main-menu">
+          <!-- <div class="e-view layout__LeftPane-sc-1t3oqgw-5 cQQcHR" id="doc-left-pane">
+            <div id="left-pane-search" class="e-view">
+              <span class="e-input-group e-control-wrapper e-ddl" aria-owns="auto-complete_options" aria-autocomplete="both" aria-labelledby="auto-complete_hidden" aria-haspopup="true" aria-expanded="false" aria-readonly="false" style="width: 100%;">
+                <select aria-hidden="true" tabindex="-1" class="e-ddl-hidden" name="auto-complete" id="auto-complete_hidden"></select>
+                <input id="auto-complete" class="e-control e-autocomplete e-lib e-input e-keyboard" role="combobox" type="text" placeholder="Filter by title" aria-placeholder="Filter by title" tabindex="0" aria-owns="auto-complete_options" aria-autocomplete="both" aria-labelledby="auto-complete_hidden" aria-haspopup="true" aria-expanded="false" aria-readonly="false" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
+                <span class="e-clear-icon e-clear-icon-hide" aria-label="close" role="button"></span>
+              </span>
+              <div class="doc-toc-search-icon"></div>
+            </div>
+            <div id="doc-left-toc" class="e-view">
+              <div id="toc" class="e-control e-accordion e-lib e-acrdn-root e-keyboard" aria-disabled="false" role="presentation" aria-multiselectable="false" style="width: 100%; height: auto;">
+                <div class="e-acrdn-item" id="acrdn_item_0" aria-expanded="false">
+                  <div class="e-acrdn-header" id="acrdn_header_1" tabindex="0" role="heading" aria-selected="false" aria-disabled="false" aria-level="84">
+                    <div class="e-acrdn-header-content">
+                      <div id="acc-path" data="/introduction/">Introduction</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> -->
+          <div class="table-content">
+            <input type="text" placeholder="Search..." class="search-icon">
+            <p class="main-menu-header">TABLE OF CONTENTS</p>
+          </div>
+          <div>
+            <!-- <ul id="main-treeview"></ul> -->
+            <div id="main-treeview"></div>
+          </div>
         </div>
       </div>
     </aside>
