chore(dev-app) publish

--- a/dev-app/getting-started.html
+++ b/dev-app/getting-started.html
@@ -29,9 +29,9 @@
 
       <div>
         <ej-drop-down-list index="1">
-          <option value="0">Huy</option>
-          <option value="1">Fuck</option>
-          <option value="2">Pizda</option>
+          <option value="0">John</option>
+          <option value="1">Albert</option>
+          <option value="2">Cat</option>
         </ej-drop-down-list>
       </div>
     </div>
