fix(test.html): remove unwanted ","

--- a/dev-app/test.html
+++ b/dev-app/test.html
@@ -56,7 +56,7 @@
                 enable-rtl.bind="enableRtl"
                 icon-css.bind="iconCss"
                 icon-position.bind="iconPosition"
-                primary.bind="isPrimary",
+                primary.bind="isPrimary"
                 toggle.bind="isToggle"></ej-button>
   </div>
 
